--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
     <!--<nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">-->
 
-    <nav class="navbar navbar-expand-sm navbar-light sticky-top site-red">
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top bg-danger ">
+		<div class="container">
         <a class="navbar-brand" href="#">Home</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -40,14 +41,15 @@
 
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
+				<!--
                 <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Link</a></li>  
-                
-                <!-- Dropdown -->
+                -->
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                        Dropdown link
+                        Games
                     </a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="#">Link 1</a>
@@ -55,10 +57,31 @@
                         <a class="dropdown-item" href="#">Link 3</a>
                     </div>
                 </li>
+				
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                        Resources
+                    </a>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="livingrules_v106a.html">Living Rules v1.06A</a>
+                        <a class="dropdown-item" href="revgen.html">Revenue Generator</a>
+                    </div>
+                </li>
+
+				<li class="nav-item"><a class="nav-link" href="#">About</a></li>
             </ul>
         </div>  
+		</div>
     </nav>
 
+
+	<div class="container text-center" style="margin-top:30px;">
+		<h1>Rome wasn't built in a day.</h1>
+		
+		<img src="images/rome_not_built_in_a_day.jpg" />
+	</div>
+
+<!--
     <div class="container" style="margin-top:30px;">
         <div class="row">
             <div class="col-sm-4">
@@ -99,6 +122,7 @@
     <div class="jumbotron text-center" style="margin-bottom:0">
         <p>Footer</p>
     </div>
+-->
 
 </body>
 </html>
