--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
 	<div class="container text-center" style="margin-top:30px;">
-		<h1>Rome wasn't built in a day.</h1>
+		<h1>Rome wasn't built in a day (and neither was this site).</h1>
 		
 		<img src="images/rome_not_built_in_a_day.jpg" />
 	</div>
