--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
 
 	<div class="container text-center" style="margin-top:30px;">
-		<h1>Rome wasn't built in a day.</h1>
-		<h3>(And neither was this site.)</3>
+		<h1>Rome wasn't built in a day...</h1>
+		<h3>(and neither was this site)</3>
 		
-		<img src="images/rome_not_built_in_a_day.jpg" />
+		<div><img src="images/rome_not_built_in_a_day.jpg" /></div>
 	</div>
 
 <!--
