--- a/revgen_ultimate.html
+++ b/revgen_ultimate.html
@@ -167,7 +167,7 @@
 									<div class="col text-right" style="padding-right:0px;">
 										<div class="mb-1">Active Wars</div>
 										<div class="mb-1">Drought Level</div>
-										<div class="mb-1">Pontifex Maximus</div>
+										<div id="pontifexmaximuslabel" class="mb-1" style="display:none;">Pontifex Maximus</div>
 									</div>
 									<div class="col text-left">
 										<div class="mb-1">
@@ -199,7 +199,7 @@
 											</select>
 										</div>
 										<div>
-											<select id="pontifexmaximus" name="pontifexmaximus">
+											<select id="pontifexmaximus" name="pontifexmaximus" style="display:none;">
 												<option value=""></option>
 												<option value="A">Aquila / Eagle</option>
 												<option value="B">Corona / Wreath</option>
