--- a/revgen_ultimate.html
+++ b/revgen_ultimate.html
@@ -403,8 +403,8 @@
 								<tr>
 									<th>Name</th>
 									<th>Governor's Faction</th>
-									<th>Taking Spoils?</th>
-									<th>Improved?</th>
+									<th>Taking Spoils</th>
+									<th>Improved</th>
 								</tr>							
 								<tr>
 									<td>Aegyptus</td>
