--- a/revgen_ultimate.html
+++ b/revgen_ultimate.html
@@ -4,14 +4,13 @@
 	<title>Ultimate Revenue Generator</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<!-- Bootstrap -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- jQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-	<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>-->
+
+	<!-- Bootstrap -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <!-- Custom styles -->
     <link rel="stylesheet" href="css/styles.css" />
@@ -509,17 +508,38 @@
 			</tr>
 		</table>
 
-	  <div class="text-center">
-		  <button id="genrev" name="genrev" class="btn btn-primary mr-3" type="submit">Generate Revenue</button>  
-		  <button id="genrevdetails" name="genrevdetails" class="btn btn-primary" type="submit">Generate Revenue with Details</button>
+	  <div class="text-center mt-3 mb-3">
+		  <button id="genrev" name="genrev" class="btn btn-danger mr-3" type="submit">Generate Revenue</button>  
+		  <button id="genrevdetails" name="genrevdetails" class="btn btn-danger" type="submit">Generate Revenue with Details</button>
 	  </div>
-
-			 
+		 
 	</form>
 
- 
-	<textarea class="form-control mt-3 mb-3" id="output" name="output" placeholder="Revenue Output" ></textarea>
+ 	<!-- <textarea class="form-control mt-3 mb-3" id="output" name="output" placeholder="Revenue Output" ></textarea> -->
 
+</div>
+
+<!-- Trigger the modal with a button -->
+<!-- <button type="button" class="btn btn-success openBtn">Open Modal</button> -->
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" name="myModal" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">Generated Revenue</h4>
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+
+            </div>
+            <div class="modal-footer">
+				<button id="copytoclipboard" type="button" class="btn btn-danger" data-dismiss="modal">Copy Roll20 Text to Clipboard</button>
+			    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
 </div>
 
 
