--- a/revgen_ultimate.html
+++ b/revgen_ultimate.html
@@ -380,12 +380,12 @@
 								<tr>
 									<td>Aegyptian Grain</td>
 									<td><select id="concaeg" name="concaeg" ><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
-									<td><label style="margin-bottom:0px;"><input type="checkbox" class="mt-1 mr-1" id="droughtaeg" name="droughtaeg" value="droughtaeg" />Drought Graft?</label></td>
+									<td><label style="margin-bottom:0px;"><input type="checkbox" class="mt-1 mr-1" id="droughtaeg" name="droughtaeg" value="droughtaeg" />Drought Graft</label></td>
 								</tr>
 								<tr>
 									<td>Sicilian Grain</td>
 									<td><select id="concscg"  name="concscg" ><option value=""></option><option value="A">Aquila / Eagle</option><option value="B">Corona / Wreath</option><option value="C">Luna / Moon</option><option value="D">Manus / Hand</option><option value="E">Parma / Shield</option><option value="F">Solis / Sun</option></select></td>
-									<td><label style="margin-bottom:0px;"><input type="checkbox" class="mr-1" id="droughtscg" name="droughtscg" value="droughtaeg" />Drought Graft?</label></td>
+									<td><label style="margin-bottom:0px;"><input type="checkbox" class="mr-1" id="droughtscg" name="droughtscg" value="droughtaeg" />Drought Graft</label></td>
 								</tr>	
 							</table>	
 						</div>
@@ -531,9 +531,13 @@
                 <h4 class="modal-title">Generated Revenue</h4>
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
-            <div class="modal-body">
 
+            <div class="modal-body">
             </div>
+
+			<textarea class="modal-body-roll20" style="display: none;"> 
+			</textarea>
+
             <div class="modal-footer">
 				<button id="copytoclipboard" type="button" class="btn btn-danger" data-dismiss="modal">Copy Roll20 Text to Clipboard</button>
 			    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
