--- a/livingrules_v106a.html
+++ b/livingrules_v106a.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Republic of Rome</title>
+    <title>Living Rules v1.06A</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,18 +26,58 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
+    <!--
 	<header>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <!-- Brand -->
             <a class="navbar-brand" href="#">Republic of Rome <small>(2nd Edition, Living Rules v1.0<span class="text-living">6A</span>)</small></a>
         </nav>
 	</header>
+    -->
 
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top bg-danger ">
+		<div class="container">
+            <a class="navbar-brand font-weight-bold pt-0" href="index.html">Home</a>
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle font-weight-bold" href="#" id="navbardrop" data-toggle="dropdown">
+                            Games
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Link 1</a>
+                            <a class="dropdown-item" href="#">Link 2</a>
+                            <a class="dropdown-item" href="#">Link 3</a>
+                        </div>
+                    </li>
+                    
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle font-weight-bold" href="#" id="navbardrop" data-toggle="dropdown">
+                            Resources
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="livingrules_v106a.html">Living Rules v1.06A</a>
+                            <a class="dropdown-item" href="revgen.html">Revenue Generator</a>
+                        </div>
+                    </li>
+
+                    <li class="nav-item font-weight-bold"><a class="nav-link" href="#">
+                        About</a>
+                    </li>
+                </ul>
+            </div>  
+		</div>
+    </nav>
 
 	<div class="container-fluid border bg-custom mb-3 shadow-sm">
-        <!--<h5 class="pt-1">Second Edition, Living Rules v1.06A</h5>-->
+        <h5 class="pt-1 text-red">Second Edition, Living Rules v1.06A</h5>
 
-		<div class="row pt-1">
+		<div class="row pt-2">
 			<div class="col-sm-4">
 
                 <div class="pb-4">
