--- a/revgen.html
+++ b/revgen.html
@@ -20,6 +20,7 @@
 <body class="bg-yellow">
 
     <!-- Navigation Bar -->
+<!--
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top bg-danger ">
 		<div class="container">
             <a class="navbar-brand font-weight-bold pt-0" href="index.html">Home</a>
@@ -58,10 +59,26 @@
             </div>  
 		</div>
     </nav>
+-->
 
 <div class="container mt-3">
 
 	<form id="revgenform">
+		<p>
+			This application is intended to streamline the Revenue Phase of your Republic of Rome games.  
+			Fill out the form below and then click one of the Generate Revenue buttons.  This will display 
+			the revenue that's generated for the State and each Faction.
+		</p>
+		<p>
+			Monies generated are in the form of a "lump sum" for the Faction, rather than assigned to individual 
+			Senators, and are to be added to existing monies that are already in play.
+		</p>
+		<p>
+			Most game situations are covered by this application.  This includes legion & fleet maintenance,
+			land bills, active wars, concessions, provincial improvement, provincial spoils, provincial taxes, 
+			Pontifex Maximus, and Provincial Wars.  The situations that are <strong>not</strong> covered are 
+			Barbarian Raids, Internal Disorder, provinces being attacked, and rebelling governors.
+		</p>
 
 		<div class="card mb-2">
 			<div class="card-header font-weight-bold display-6 bg-red">State</div>
