--- a/revgen.html
+++ b/revgen.html
@@ -65,19 +65,24 @@
 
 	<form id="revgenform">
 		<p>
-			This application is intended to streamline the Revenue Phase of your Republic of Rome games.  
-			Fill out the form below and then click one of the Generate Revenue buttons.  This will display 
-			the revenue that's generated for the State and each Faction.
+		This application will significantly streamline the Revenue Phase of your Republic of Rome games. 
+		Fill out the form below and click one of the Generate Revenue buttons. This will display the revenue 
+		that's generated for the State and each Faction.
 		</p>
 		<p>
-			Monies generated are in the form of a "lump sum" for the Faction, rather than assigned to individual 
-			Senators, and are to be added to existing monies that are already in play.
+		Faction revenue is in the form of a "lump sum" rather than assigned to individual Senators. All 
+		revenue generated is to be added to what is already in play.
 		</p>
 		<p>
-			Most game situations are covered by this application.  This includes legion & fleet maintenance,
-			land bills, active wars, concessions, provincial improvement, provincial spoils, provincial taxes, 
-			Pontifex Maximus, and Provincial Wars.  The situations that are <strong>not</strong> covered are 
-			Barbarian Raids, Internal Disorder, provinces being attacked, and rebelling governors.
+		Most game situations are handled by this application. This includes legion & fleet maintenance, 
+		land bills, active wars, concessions, graft from Aegyptian and Sicilian Grain, provincial improvement, 
+		provincial spoils, provincial taxes, negative provincial spoils applied to the State rather than 
+		Faction, Pontifex Maximus's temple donations, and Provincial Wars.  Barbarian Raids, Internal Disorder, 
+		provinces being attacked, and rebelling governors are <strong>not</strong> handled.
+		</p>
+		<p>
+		Clicking the Save Game button will download a file with the game's data.  Reload previously saved 
+		games via the Load Game button.
 		</p>
 
 		<div class="card mb-2">
