--- a/revgen.html
+++ b/revgen.html
@@ -77,8 +77,9 @@
 		Most game situations are handled by this application. This includes legion & fleet maintenance, 
 		land bills, active wars, concessions, graft from Aegyptian and Sicilian Grain, provincial improvement, 
 		provincial spoils, provincial taxes, negative provincial spoils applied to the State rather than 
-		Faction, Pontifex Maximus's temple donations, and Provincial Wars.  Barbarian Raids, Internal Disorder, 
-		provinces being attacked, and rebelling governors are <strong>not</strong> handled.
+		Faction, Pontifex Maximus's temple donations, and Provincial Wars.  Select the "No Revenue" option for
+		provinces to handle scenarios like Barbarian Raids, Internal Disorder, wars attacking provinces, and 
+		rebelling governors.
 		</p>
 		<p>
 		Clicking the Save Game button will download a file with the game's data.  Reload previously saved 
