--- a/revgen.html
+++ b/revgen.html
@@ -62,6 +62,7 @@
 -->
 
 <div class="container mt-3">
+	<h2 class="text-red">Revenue Generator</h2>
 
 	<form id="revgenform">
 		<p>
@@ -75,15 +76,15 @@
 		</p>
 		<p>
 		Most game situations are handled by this application. This includes legion & fleet maintenance, 
-		land bills, active wars, concessions, graft from Aegyptian and Sicilian Grain, provincial improvement, 
+		land bills, active wars, concessions, graft from Aegyptian and Sicilian Grain (due to droughts), provincial improvement, 
 		provincial spoils, provincial taxes, negative provincial spoils applied to the State rather than 
 		Faction, Pontifex Maximus's temple donations, and Provincial Wars.  Select the "No Revenue" option for
-		provinces to handle scenarios like Barbarian Raids, Internal Disorder, wars attacking provinces, and 
-		rebelling governors.
+		scenarios when a province's normal revenue does not occur (e.g. Barbarian Raids, Internal Disorder, and
+		wars attacking provinces).
 		</p>
 		<p>
 		Clicking the Save Game button will download a file with the game's data.  Reload previously saved 
-		games via the Load Game button.
+		game files via the Load Game button.
 		</p>
 
 		<div class="card mb-2">
