--- a/index.html
+++ b/index.html
@@ -27,108 +27,11 @@
 
 <body class="bg-yellow">
 
-    <div class="jumbotron text-center bg-yellow" style="margin-bottom:0;">
-    <h1>Patres Conscripti</h1>
-    <p>A website dedicated to The Republic of Rome* board game.</p> 
-    </div>
-
-    <!--<nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top">-->
-
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top bg-danger "> 
-		<div class="container">
-            <a class="navbar-brand font-weight-bold pt-0" href="#">Home</a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                    <!--
-                    <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Link</a></li>  
-                    -->
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle font-weight-bold" href="#" id="navbardrop" data-toggle="dropdown">
-                            Games
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Link 1</a>
-                            <a class="dropdown-item" href="#">Link 2</a>
-                            <a class="dropdown-item" href="#">Link 3</a>
-                        </div>
-                    </li>
-                    
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle font-weight-bold" href="#" id="navbardrop" data-toggle="dropdown">
-                            Resources
-                        </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="livingrules_v106a.html">Living Rules v1.06A</a>
-                            <a class="dropdown-item" href="revgen.html">Revenue Generator</a>
-                        </div>
-                    </li>
-
-                    <li class="nav-item font-weight-bold"><a class="nav-link" href="#">
-                        About</a>
-                    </li>
-                </ul>
-            </div>  
-		</div>
-    </nav>
-
-
-	<div class="container text-center" style="margin-top:30px;">
-		<h1>Rome wasn't built in a day...</h1>
-		<h3>(and neither was this site)</3>
-		
-		<div><img src="images/rome_not_built_in_a_day.jpg" /></div>
-	</div>
-
-<!--
-    <div class="container" style="margin-top:30px;">
-        <div class="row">
-            <div class="col-sm-4">
-
-                <h2>About Me</h2>
-                <h5>Photo of me:</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-
-                <h3>Some Links</h3>
-                <p>Lorem ipsum dolor sit ame.</p>
-                <ul class="nav nav-pills flex-column">
-                    <li class="nav-item"><a class="nav-link active" href="#">Active</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Link</a></li>
-                    <li class="nav-item"><a class="nav-link disabled" href="#">Disabled</a></li>
-                </ul>
-                <hr class="d-sm-none">
-            </div>
-
-            <div class="col-sm-8">
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Dec 7, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-                <br/>
-
-                <h2>TITLE HEADING</h2>
-                <h5>Title description, Sep 2, 2017</h5>
-                <div class="fakeimg">Fake Image</div>
-                <p>Some text..</p>
-                <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="jumbotron text-center" style="margin-bottom:0">
-        <p>Footer</p>
-    </div>
--->
+	<p>
+    This site has moved to 
+	<a href="https://tlscotarius.github.io/patresconscripti/index.html">https://tlscotarius.github.io/patresconscripti/index.html</a>.  
+	Please update your bookmarks accordingly.
+	</p>
 
 </body>
 </html>
